--- a/MH.UsePatterns/MH.UsePatterns.csproj
+++ b/MH.UsePatterns/MH.UsePatterns.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MH.AbstractFactory\MH.AbstractFactory.csproj" />
     <ProjectReference Include="..\MH.Builder\MH.Builder.csproj" />
     <ProjectReference Include="..\MH.FactoryMethod\MH.FactoryMethod.csproj" />
+    <ProjectReference Include="..\MH.Mediator\MH.Mediator.csproj" />
     <ProjectReference Include="..\MH.SimpleFactory\MH.SimpleFactory.csproj" />
   </ItemGroup>
 
