--- a/MH.UsePatterns/MH.UsePatterns.csproj
+++ b/MH.UsePatterns/MH.UsePatterns.csproj
@@ -6,13 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MH.Proxy\MH.Proxy.csproj" />
     <ProjectReference Include="..\Patterns\MH.AbstractFactory\MH.AbstractFactory.csproj" />
     <ProjectReference Include="..\Patterns\MH.Builder\MH.Builder.csproj" />
     <ProjectReference Include="..\Patterns\MH.ChainOfResponsibility\MH.ChainOfResponsibility.csproj" />
     <ProjectReference Include="..\Patterns\MH.Decorator\MH.Decorator.csproj" />
     <ProjectReference Include="..\Patterns\MH.FactoryMethod\MH.FactoryMethod.csproj" />
     <ProjectReference Include="..\Patterns\MH.Mediator\MH.Mediator.csproj" />
+    <ProjectReference Include="..\Patterns\MH.Proxy\MH.Proxy.csproj" />
     <ProjectReference Include="..\Patterns\MH.SimpleFactory\MH.SimpleFactory.csproj" />
   </ItemGroup>
 
