--- a/MH.UsePatterns/MH.UsePatterns.csproj
+++ b/MH.UsePatterns/MH.UsePatterns.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Patterns\MH.Observer\MH.Observer.csproj" />
     <ProjectReference Include="..\Patterns\MH.Proxy\MH.Proxy.csproj" />
     <ProjectReference Include="..\Patterns\MH.SimpleFactory\MH.SimpleFactory.csproj" />
+    <ProjectReference Include="..\Patterns\MH.State\MH.State.csproj" />
   </ItemGroup>
 
 </Project>
